Fixed Bilhete Digital on mobile

--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -249,7 +249,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin:10px 0 20px 0;
+    margin:10px 0 0 0;
 }
 
 .time-input{
@@ -321,7 +321,7 @@
 
     .home-content {
         background-color: #041F48;
-        height:380px;
+        height:500px;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -333,7 +333,7 @@
     .footerlogo {
         z-index: 2;
         margin-bottom: 20px;
-        margin-top: 70px;
+        margin-top: 57px;
 
     }
     .search-box {
@@ -395,3 +395,8 @@ height: 100%;
 
 }
 
+@media (max-height: 760px){
+    .home-content {
+        height: 545px;
+    }
+}
